service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-tomcat
  labels:
    run: tomcat
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    run: tomcat
