ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tingress
spec:
  backend:
    serviceName: my-tomcat
    servicePort: 21576
